		*** Things just look better in general.
		*** Several possible unsoundness issues were identified and fixed.
	** This opens up the possibility of new types of `Aio` objects, such as one that returns a `Future` or utilizes MPSC channels.
* `Error::ProtocolError` renamed to `Error::Protocol` in order to appease Clippy.
* `Message::try_from` was renamed to `Message::from_slice`.
* The pipe notify callback changed from `FnMut + Send` to `Fn + Sync + Send` to avoid unneeded locking.
* Uncaught panics in a callback now cause the application to abort, matching the behavior concerning FFI boundaries that was (re)introduced in Rustc 1.33.

=== Deprecated ===

=== Removed ===

* The `nng-sys` crate has been moved to a new repository (#17).

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.4.0] - 2019-01-27 ==

=== Added ===

* Sockets can now send messages asynchronously via `Socket::send_async`.
* Sockets can now receive messages asynchronously via `Socket::recv_async`.
* Sockets can now be cloned to have multiple handles to the same underlying NNG socket.
* `Socket::close` and `Context::close` have been added to match the style of Dialers, Pipes, and Listeners.
* Pipes and the pipe notify functionality has been implemented. (#14)

=== Changed ===

* The majority of types are now at the root of the crate rather than a module.
* Asynchronous sending on a context is now via `Context::send` rather than `Aio::send`.
* Asynchronous receiving on a context is now via `Context::recv` rather than `Aio::recv`.
* Dialers and listeners are now treated as handle values and do not close on drop.
* The PUBSUB example now publishes the number of subscribers rather than the time in order to show off the pipe notify functionality.

=== Fixed ===
