@@ -52,7 +52,7 @@ impl Context
 	/// This function will return immediately. If there is already an I/O
 	/// operation in progress, this function will return `ErrorKind::TryAgain`
 	/// and return the message to the caller.
-	pub fn send<A: Aio>(&self, aio: &mut A, msg: Message) -> SendResult<()>
+	pub fn send<A: Aio>(&self, aio: &A, msg: Message) -> SendResult<()>
 	{
 		aio.send_ctx(self, msg)
 	}
@@ -65,7 +65,7 @@ impl Context
 	/// This function will return immediately. If there is already an I/O
 	/// operation in progress that is _not_ a receive operation, this function
 	/// will return `ErrorKind::TryAgain`.
-	pub fn recv<A: Aio>(&self, aio: &mut A) -> Result<()>
+	pub fn recv<A: Aio>(&self, aio: &A) -> Result<()>
 	{
 		aio.recv_ctx(self)
 	}
